[package]
name = "emoji_pix"
version = "0.1.0"
authors = ["Michael Milton <michael.r.milton@gmail.com>"]
description = "A simple command-line utility (and Rust crate!) for converting from a conventional image file (e.g. a PNG file) into a pixel-art version constructed with emoji"
license = "GPL-3.0-only"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.4"
image = "0.23.14"
lazy_static = "1.4.0"
num-traits = "0.2.14"
scarlet = "1.1.0"
unicode_names2 = "0.4.0"
